src/snapshots/alma__parser__tests__test_expression__identifiers_with_module_access-2.snap
---
source: src/parser.rs
assertion_line: 2431
expression: "parse(\"A.B\")"
---
Input:

A.B

Result:

Node {
    start: Index(
        0,
    ),
    end: Index(
        2,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Identifier {
            module: Some(
                ModuleName {
                    parts: [
                        Node {
                            start: Index(
                                0,
                            ),
                            end: Index(
                                0,
                            ),
                            value: CapitalizedIdentifier_ {
                                name: SymbolU32 {
                                    value: 1,
                                },
                            },
                        },
                    ],
                    full_name: SymbolU32 {
                        value: 1,
                    },
                },
            ),
            identifier: CapitalizedIdentifier(
                Node {
                    start: Index(
                        2,
                    ),
                    end: Index(
                        2,
                    ),
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 2,
                        },
                    },
                },
            ),
        },
    },
}
