src/snapshots/alma__parser__tests__test_expression__identifiers_with_module_access-5.snap
---
source: src/parser.rs
assertion_line: 2620
expression: "parse(\"A.B.c\")"
---
Input:

A.B.c

Result:

Index(
    0,
)

{
    Index(
        0,
    ): Expression {
        span: Index(
            3,
        ),
        expr: Identifier {
            module: Some(
                ModuleName {
                    parts: [
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 1,
                            },
                            span: Index(
                                0,
                            ),
                        },
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 2,
                            },
                            span: Index(
                                1,
                            ),
                        },
                    ],
                    full_name: SymbolU32 {
                        value: 4,
                    },
                },
            ),
            identifier: Identifier(
                Identifier {
                    name: SymbolU32 {
                        value: 3,
                    },
                    span: Index(
                        2,
                    ),
                },
            ),
        },
    },
}

{
    Index(
        0,
    ): Span {
        start: Index(
            0,
        ),
        end: Index(
            0,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            2,
        ),
        end: Index(
            2,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            4,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            0,
        ),
        end: Index(
            4,
        ),
    },
}
