src/snapshots/alma__parser__tests__test_expression__identifiers_with_module_access-6.snap
---
source: src/parser.rs
assertion_line: 2447
expression: "parse(\"A.B.C.d\")"
---
Input:

A.B.C.d

Result:

Expression {
    span: Index(
        4,
    ),
    typ: RefCell {
        value: None,
    },
    expr: Identifier {
        module: Some(
            ModuleName {
                parts: [
                    CapitalizedIdentifier {
                        name: SymbolU32 {
                            value: 1,
                        },
                        span: Index(
                            0,
                        ),
                    },
                    CapitalizedIdentifier {
                        name: SymbolU32 {
                            value: 2,
                        },
                        span: Index(
                            1,
                        ),
                    },
                    CapitalizedIdentifier {
                        name: SymbolU32 {
                            value: 3,
                        },
                        span: Index(
                            2,
                        ),
                    },
                ],
                full_name: SymbolU32 {
                    value: 5,
                },
            },
        ),
        identifier: Identifier(
            Identifier {
                name: SymbolU32 {
                    value: 4,
                },
                span: Index(
                    3,
                ),
            },
        ),
    },
}
