src/snapshots/alma__parser__tests__test_expression__identifiers_with_module_access-7.snap
---
source: src/parser.rs
assertion_line: 2436
expression: "parse(\"function record.access\")"
---
Input:

function record.access

Result:

Node {
    start: Index(
        0,
    ),
    end: Index(
        3,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: FnCall {
            function: Node {
                start: Index(
                    0,
                ),
                end: Index(
                    0,
                ),
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier {
                        module: None,
                        identifier: Identifier(
                            Node {
                                start: Index(
                                    0,
                                ),
                                end: Index(
                                    0,
                                ),
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                        ),
                    },
                },
            },
            arguments: [
                Node {
                    start: Index(
                        1,
                    ),
                    end: Index(
                        3,
                    ),
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: PropertyAccess {
                            expression: Node {
                                start: Index(
                                    1,
                                ),
                                end: Index(
                                    1,
                                ),
                                value: Expression_ {
                                    typ: RefCell {
                                        value: None,
                                    },
                                    expr: Identifier {
                                        module: None,
                                        identifier: Identifier(
                                            Node {
                                                start: Index(
                                                    1,
                                                ),
                                                end: Index(
                                                    1,
                                                ),
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 2,
                                                    },
                                                },
                                            },
                                        ),
                                    },
                                },
                            },
                            property: Node {
                                start: Index(
                                    3,
                                ),
                                end: Index(
                                    3,
                                ),
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 3,
                                    },
                                },
                            },
                        },
                    },
                },
            ],
        },
    },
}
