src/snapshots/alma__parser__tests__test_expression__identifiers_with_module_access-8.snap
---
source: src/parser.rs
assertion_line: 2437
expression: "parse(\"A.b\")"
---
Input:

A.b

Result:

Node {
    start: Index(
        0,
    ),
    end: Index(
        2,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Identifier {
            module: Some(
                ModuleName {
                    parts: [
                        Node {
                            start: Index(
                                0,
                            ),
                            end: Index(
                                0,
                            ),
                            value: CapitalizedIdentifier_ {
                                name: SymbolU32 {
                                    value: 1,
                                },
                            },
                        },
                    ],
                    full_name: SymbolU32 {
                        value: 1,
                    },
                },
            ),
            identifier: Identifier(
                Node {
                    start: Index(
                        2,
                    ),
                    end: Index(
                        2,
                    ),
                    value: Identifier_ {
                        name: SymbolU32 {
                            value: 2,
                        },
                    },
                },
            ),
        },
    },
}
