src/snapshots/alma__parser__tests__test_expression__identifiers_with_module_access.snap
---
source: src/parser.rs
assertion_line: 2402
expression: "parse(\"A\")"
---
Input:

A

Result:

Node {
    start: 0,
    end: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Identifier(
            None,
            CapitalizedIdentifier(
                Node {
                    start: 0,
                    end: 0,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ),
        ),
    },
}
