src/snapshots/alma__parser__tests__test_expression__int.snap
---
source: src/parser.rs
assertion_line: 2142
expression: "parse(\"123\")"
---
Input:

123

Result:

Node {
    start: Idx(
        0,
    ),
    end: Idx(
        0,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Float(
            123.0,
        ),
    },
}
