src/snapshots/alma__parser__tests__test_expression__lambda-2.snap
---
source: src/parser.rs
assertion_line: 2063
expression: "parse(\"\\\\a -> \\\\b -> a\")"

---
Input:

\a -> \b -> a

Result:

Node {
    start: 0,
    end: 13,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Lambda(
            Lambda {
                parameters: [
                    Node {
                        start: 1,
                        end: 2,
                        line: 1,
                        column: 1,
                        value: Identifier(
                            Node {
                                start: 1,
                                end: 2,
                                line: 1,
                                column: 1,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                        ),
                    },
                ],
                body: Node {
                    start: 6,
                    end: 13,
                    line: 1,
                    column: 6,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Lambda(
                            Lambda {
                                parameters: [
                                    Node {
                                        start: 7,
                                        end: 8,
                                        line: 1,
                                        column: 7,
                                        value: Identifier(
                                            Node {
                                                start: 7,
                                                end: 8,
                                                line: 1,
                                                column: 7,
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 2,
                                                    },
                                                },
                                            },
                                        ),
                                    },
                                ],
                                body: Node {
                                    start: 12,
                                    end: 13,
                                    line: 1,
                                    column: 12,
                                    value: Expression_ {
                                        typ: RefCell {
                                            value: None,
                                        },
                                        expr: Identifier(
                                            None,
                                            Identifier(
                                                Node {
                                                    start: 12,
                                                    end: 13,
                                                    line: 1,
                                                    column: 12,
                                                    value: Identifier_ {
                                                        name: SymbolU32 {
                                                            value: 1,
                                                        },
                                                    },
                                                },
                                            ),
                                        ),
                                    },
                                },
                            },
                        ),
                    },
                },
            },
        ),
    },
}
