src/snapshots/alma__parser__tests__test_expression__lambda-3.snap
---
source: src/parser.rs
assertion_line: 2064
expression: "parse(\"\\\\a b -> a\")"

---
Input:

\a b -> a

Result:

Node {
    start: 0,
    end: 9,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Lambda(
            Lambda {
                parameters: [
                    Node {
                        start: 1,
                        end: 2,
                        line: 1,
                        column: 1,
                        value: Identifier(
                            Node {
                                start: 1,
                                end: 2,
                                line: 1,
                                column: 1,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                        ),
                    },
                    Node {
                        start: 3,
                        end: 4,
                        line: 1,
                        column: 3,
                        value: Identifier(
                            Node {
                                start: 3,
                                end: 4,
                                line: 1,
                                column: 3,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 2,
                                    },
                                },
                            },
                        ),
                    },
                ],
                body: Node {
                    start: 8,
                    end: 9,
                    line: 1,
                    column: 8,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Identifier(
                            None,
                            Identifier(
                                Node {
                                    start: 8,
                                    end: 9,
                                    line: 1,
                                    column: 8,
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 1,
                                        },
                                    },
                                },
                            ),
                        ),
                    },
                },
            },
        ),
    },
}
